feat(louvre): improve artwork page

--- a/louvre/src/pages/Artwork/Artwork.css
+++ b/louvre/src/pages/Artwork/Artwork.css
@@ -1,3 +1,13 @@
+.artwork-image {
+    width: 100%;
+}
+
 .artwork-content {
+    text-align: justify;
+}
+
+.info-row {
+    margin: 10px 20px;
+    font-size: large;
     text-align: justify;
 }
