--- a/louvre/src/pages/Activity/Activity.css
+++ b/louvre/src/pages/Activity/Activity.css
@@ -2,6 +2,13 @@
     width: 100%;
 }
 
+.map {
+    height: 200px;
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
 .artwork-content {
     text-align: justify;
 }
